--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "firstsight",
-    "description": "An empty new project",
+    "description": "firstsight",
     "slug": "firstsight",
     "privacy": "public",
     "sdkVersion": "19.0.0",
